pod-security/baseline/disallow-capabilities/.chainsaw-test/pod-good.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01-new
spec:
  initContainers:
  - name: init
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
          - AUDIT_WRITE
          - CHOWN
          - MKNOD
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_CHROOT", "SETUID", "KILL", "SETGID"]
  - name: add-capabilities-again
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
        drop:
        - "ALL"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02-new
spec:
  initContainers:
  - name: init
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
          - AUDIT_WRITE
          - CHOWN
          - MKNOD
  - name: init-again
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["SYS_CHROOT", "SETUID", "KILL", "SETGID"]
        drop:
        - "ALL"
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03-new
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
    securityContext:
      capabilities:
        add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04-new
spec:
  containers:
  - name: add-capabilities
    image: busybox:1.35
  - name: add-capabilities-again
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  - name: container02
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  containers:
  - name: container01
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  initContainers:
  - name: initcontainer01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - DAC_OVERRIDE
  containers:
  - name: container01
    image: busybox:1.35
    securityContext:
      capabilities:
        add:
        - SETGID
