pod-security/baseline/disallow-capabilities/.chainsaw-test/podcontroller-bad.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01-new
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: init
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
              - AUDIT_WRITE
              - NET_ADMIN
              - MKNOD
      containers:
      - name: add-capabilities
        image: busybox:1.35
        securityContext:
          capabilities:
            add: ["SYS_CHROOT", "SETUID", "KILL", "SETGID"]
      - name: add-capabilities-again
        image: busybox:1.35
        securityContext:
          capabilities:
            add: ["NET_BIND_SERVICE", "CAP_NET_RAW", "SETFCAP", "FOWNER"]
            drop:
            - "ALL"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01-new
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: Never
          initContainers:
          - name: init
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                  - AUDIT_WRITE
                  - CHOWN
                  - MKNOD
          containers:
          - name: add-capabilities
            image: busybox:1.35
            securityContext:
              capabilities:
                add: ["SYS_CHROOT", "CAP_SYS_ADMIN", "KILL", "SETGID"]
          - name: add-capabilities-again
            image: busybox:1.35
            securityContext:
              capabilities:
                add: ["NET_BIND_SERVICE", "SETPCAP", "SETFCAP", "FOWNER"]
                drop:
                - "ALL"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      - name: container02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
      - name: initcontainer02
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - SETGID
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      initContainers:
      - name: initcontainer01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - NET_RAW
      containers:
      - name: container01
        image: busybox:1.35
        securityContext:
          capabilities:
            add:
            - SYS_ADMIN
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          - name: container02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
          - name: initcontainer02
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SETGID
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          initContainers:
          - name: initcontainer01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - NET_RAW
          containers:
          - name: container01
            image: busybox:1.35
            securityContext:
              capabilities:
                add:
                - SYS_ADMIN
---
