pod-security/baseline/disallow-capabilities/.chainsaw-test/chainsaw-step-01-assert-1.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-capabilities
status:
  conditionStatus:
    conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
